--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '../styles/base';
+@import '../styles/features';
+@import '../styles/footer';
+@import '../styles/gallery';
+@import '../styles/header';
+@import '../styles/homes';
+@import '../styles/sidebar';
+@import '../styles/story';
+@import '../styles/typography';
+@import '../styles/realtors';
