--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,10 +93,247 @@
         <button class="btn">Find your own home</button>
     </div>
     <section class="homes">
-        HOMES
+        <div class="home">
+            <img src="../assets/house-1.jpeg" alt="House 1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-lock"></use>
+            </svg>
+            <h5 class="home__name">Beautiful Family House</h5>
+            <div class="home__location">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>USA</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>5 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>325 m<sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>$1,200 000</p>
+            </div>
+            <button class="btn home__btn">Contact realtor</button>
+        </div>
+        
+        <div class="home">
+            <img src="../assets/house-2.jpeg" alt="House 1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-lock"></use>
+            </svg>
+            <h5 class="home__name">Modern Glass Villa</h5>
+            <div class="home__location">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>Canada</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>6 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>450 m<sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>$2,200 000</p>
+            </div>
+            <button class="btn home__btn">Contact realtor</button>
+        </div>
+
+        <div class="home">
+            <img src="../assets/house-3.jpeg" alt="House 1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-lock"></use>
+            </svg>
+            <h5 class="home__name">Cosy Country House</h5>
+            <div class="home__location">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>UK</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>4 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>250 m<sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>$800 000</p>
+            </div>
+            <button class="btn home__btn">Contact realtor</button>
+        </div>
+
+        <div class="home">
+            <img src="../assets/house-4.jpeg" alt="House 1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-lock"></use>
+            </svg>
+            <h5 class="home__name">Large Rustical Villa</h5>
+            <div class="home__location">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>Portugal</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>6 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>480 m<sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>$1,200 000</p>
+            </div>
+            <button class="btn home__btn">Contact realtor</button>
+        </div>
+
+        <div class="home">
+            <img src="../assets/house-5.jpeg" alt="House 1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-lock"></use>
+            </svg>
+            <h5 class="home__name">Majestic Palace House</h5>
+            <div class="home__location">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>Germany</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>18 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>325 m<sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>$1,200 000</p>
+            </div>
+            <button class="btn home__btn">Contact realtor</button>
+        </div>
+
+        <div class="home">
+            <img src="../assets/house-6.jpeg" alt="House 1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-lock"></use>
+            </svg>
+            <h5 class="home__name">Modern Family Apartment</h5>
+            <div class="home__location">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>Italy</p>
+            </div>
+            <div class="home__rooms">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>5 rooms</p>
+            </div>
+            <div class="home__area">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>325 m<sup>2</sup></p>
+            </div>
+            <div class="home__price">
+                <svg class="home__like">
+                <use xlink:href="../assets/sprite.svg#icon-location2"></use>
+            </svg>
+            <p>$1,200 000</p>
+            </div>
+            <button class="btn home__btn">Contact realtor</button>
+        </div>
     </section>
     <section class="gallery">
-        GALLERY
+        <figure class="gallery__item gallery__item--1">
+            <img src="../assets/gal-1.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+            <img src="../assets/gal-2.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+            <img src="../assets/gal-3.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+            <img src="../assets/gal-4.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--5">
+            <img src="../assets/gal-5.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--6">
+            <img src="../assets/gal-6.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--7">
+            <img src="../assets/gal-7.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--8">
+            <img src="../assets/gal-8.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--9">
+            <img src="../assets/gal-9.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--10">
+            <img src="../assets/gal-10.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--11">
+            <img src="../assets/gal-11.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--12">
+            <img src="../assets/gal-12.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--13">
+            <img src="../assets/gal-13.jpeg" alt="" class="gallery__img">
+        </figure>
+        <figure class="gallery__item gallery__item--14">
+            <img src="../assets/gal-14.jpeg" alt="" class="gallery__img">
+        </figure>
     </section>
     <footer class="footer">
         FOOTER
