--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,63 @@
 <div class="container">
     <div class="sidebar">
-        SIDEBAR
+        <button class="nav-btn">
+
+        </button>
     </div>
     <header class="header">
-        HEADER
+        <img src="../assets/logo.png" alt="Nexter logo" class="header__logo">
+        <h3 class="heading-3">
+            Your own home
+        </h3>
+        <h1 class="heading-1">
+            The ultimate personal freedom
+        </h1>
+        <button class="btn header__btn">
+            View our properties
+        </button>
+        <div class="header__seenon-text">
+            Seen on
+        </div>
+        <div class="header__seenon-logos">
+            <img src="../assets/logo-bbc.png" alt="bbc logo">
+            <img src="../assets/logo-forbes.png" alt="bbc logo">
+            <img src="../assets/logo-techcrunch.png" alt="bbc logo">
+            <img src="../assets/logo-bi.png" alt="bbc logo">
+        </div>
     </header>
     <div class="realtors">
-        TOP THREE REALTORS
+        <h3 class="heading-3">
+            Top 3 Realtors
+        </h3>
+        <div class="realtors__list">
+            <img src="../assets/realtor-1.jpeg" alt="REaltor 1" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">
+                    Erik Feinman
+                </h4>
+                <p class="realtors__sold">
+                    245 houses sold
+                </p>
+            </div>
+            <img src="../assets/realtor-2.jpeg" alt="REaltor 1" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">
+                    Kim Brown
+                </h4>
+                <p class="realtors__sold">
+                    212 houses sold
+                </p>
+            </div>
+            <img src="../assets/realtor-3.jpeg" alt="REaltor 1" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4--light">
+                    Tobey Ramsay
+                </h4>
+                <p class="realtors__sold">
+                    197 houses sold
+                </p>
+            </div>
+        </div>
     </div>
     <section class="features">
         <div class="feature">
@@ -336,6 +387,28 @@
         </figure>
     </section>
     <footer class="footer">
-        FOOTER
+        <ul class="nav">
+            <li class="nav__item">
+                <a href="#" class="nav__link">Find your dream home</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Request proposal</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Download the home planner</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Contact us</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Submit your property</a>
+            </li>
+            <li class="nav__item">
+                <a href="#" class="nav__link">Come work with us</a>
+            </li>
+        </ul>
+        <p class="copyright">
+            &copy; Copyright 2021. Feel free to use this project for your own purposes. This does NOT apply if you plan to produce your own courses based on this project.
+        </p>
     </footer>
 </div>
